Revision history for Perl module Module::Which

0.03 2014-06-24 NEILB
    - Clarify in the doc that the return data includes the path to the module.
    - Switched to Dist::Zilla
    - Reformatted this file as per CPAN::Changes::Spec
    - Removed Module::Downgrade, as only aiming to support 5.6+

0.0207 2008-03-05 FERREIRA
    - mention Module::Finder in SEE ALSO
    - recommends Term::Size::Any instead of Term::Size
    - hacked up support for "which_pm perl"
    - TODO: document that "which_pm perl" works

0.0206 2007-11-20 FERREIRA
    - no code change
    - fixed packaging issues

0.0205 2006-05-21 FERREIRA
    - BUG FIX: in CPAN RT #16332, Jeff Tanner 
      noticed that the synopsis code didn't work. 
      Indeed, &which was using "return => 'ARRAY'" 
      as default instead of "return => 'HASH'"

0.0204 2006-05-21 FERREIRA
    - Term::Size is recommended
    - when determining terminal size, non-tty STDOUT
      prevents truncation
    - if possible, terminal width is retrieved with
      the help of Term::Size

0.02_03 2005-12-27 FERREIRA
    - new switch -I for specifying the library paths
    - correspoding changes to Module::Which
    - new switch -w for specifying terminal width

0.02_02 2005-12-08 FERREIRA
    - module versions are obtained via MM->parse_file
      after using EE::MM

0.02_01 2005-10-28 FERREIRA
    - now which_pm uses String::Truncate when file paths
      are too long (instead of simple truncate)
    - documented bug about wrong versions when multiple
      instances are found in library path

0.02 2005-10-10 FERREIRA
    - just the same as 0.01_05
    - it's a shame: the only purpose of this
      release it to raise my kwalitee to 16.0
      as development versions aren't counted

0.01_05 2005-07-27 FERREIRA
    - added a "--p5p" option to which_pm so that Config-related
      paths can be shown
    - wrote tests for the previously introduced modules
    - wrote Module::Which::P5Path to make Config-related