@@ -1,6 +1,8 @@
 Revision history for Perl module Module::Which
 
 0.03 2014-06-24 NEILB
+    - Fixed the SYNOPSIS to show working code, and the two types of result
+      data you can get from which(). RT#16332
     - Clarify in the doc that the return data includes the path to the module.
     - Switched to Dist::Zilla
     - Reformatted this file as per CPAN::Changes::Spec
